<resources>
    <string name="app_name">Campus Virtual</string>
    <string name="app_about">Plataforma movil de aprendizaje autoasistido.\n</string>
    <string name="data_empty">Aún no contamos con información</string>
    <string name="data_empty_detail">Según como avancemos podremos tener algo que mostrarte en esta sección.</string>
    <string name="data_error">Error Inesperado</string>
    <string name="data_tryagain_button">Reintentar</string>
    <string name="app_welcome">Bienvenido</string>
    <string name="title_home">Inicio</string>
    <string name="title_profile">Mi Perfil</string>
    <string name="title_classrooms">Clases</string>
    <string name="title_courses">Cursos</string>
    <string name="title_books">Libros</string>
    <string name="title_assignments">Tareas</string>
    <string name="title_operational_ability">Habilidad Operativa</string>
    <string name="title_gradebook">Resultados</string>
    <string name="title_pdfviewer">Documento Digital</string>
    <string name="title_logout">Cerrar Sesión</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_about">Acerca</string>
    <string name="menu_debug">Debug</string>
    <string name="menu_suggestion">Sugerencias</string>
    <string name="connection_error">Problemas de conexión</string>
    <string name="disconnection_error">No está conectado a Internet</string>
    <string name="download_file">Descargando documento…</string>
    <string name="download_completed">Descarga completa</string>
    <string name="loading_information">Cargando información…</string>
    <string name="connection_timeout">Tiempo de espera agotado para esta solicitud</string>
    <string name="request_permission">Solicitud de acceso</string>
    <string name="login_welcome_back">Bienvenido</string>
    <string name="choose_picture">Seleccione una imagen…</string>
    <string name="donthave_permission">No ha concedido el permiso</string>
    <string name="app_continue_button">Continuar</string>
    <string name="app_notnow_button">Ahora No</string>
    <string name="app_send">Enviar</string>
    <string name="app_buy">Comprar</string>
    <string name="app_getinto">Ingresar</string>
    <string name="app_verify">Verificar</string>
    <string name="home_next_button">VER PERFILES</string>
    <string name="suggestion_information">Envíanos tus sugerencias:</string>
    <string name="suggestion_content_message">Debe ingresar un contenido</string>
    <string name="suggestion_success">¡Muchas gracias por tus sugerencias!</string>
    <string name="login_loginas">Iniciar como:</string>
    <string name="login_phonenumber">Número de celular</string>
    <string name="login_password">Contraseña</string>
    <string name="login_login_button">Ingresar</string>
    <string name="login_register_button">Registrar</string>
    <string name="login_verify_sucess">Registrando acceso al servidor…</string>
    <string name="verify_phone_title">Verifique su número</string>
    <string name="verify_phone_message">Ingrese el código de verificación que le fue enviado a su número %s.</string>
    <string name="tab_title_box">Biblioteca</string>
    <string name="tab_title_store">Tienda</string>
    <string name="app_buy_dialog_title">Comprar Contenido</string>
    <string name="app_buy_dialog_message">¿Desea adquirir el contenido %s?</string>
    <string name="content_theory_text">Teoría</string>
    <string name="content_practice_text">Ejercicios de aprendizaje</string>
    <string name="content_reforce_text">Ejercicios de refuerzo</string>
    <string name="content_exam_text">Examen</string>
    <string name="store_checkout_success">Se ha actualizado su biblioteca</string>
    <string name="profile_update_button">Guardar Perfil</string>
    <string name="profile_firstname">Nombres</string>
    <string name="profile_lastname">Apellidos</string>
    <string name="profile_gender">Sexo</string>
    <string name="profile_birthday">Fecha de Nacimiento</string>
    <string name="profile_email">Correo</string>
    <string name="profile_phonenumber">Teléfono</string>
    <string name="profile_country">País</string>
    <string name="profile_departament">Departamento</string>
    <string name="profile_province">Provincia</string>
    <string name="profile_district">Distrito</string>
    <string name="profile_school">Colegio</string>
    <string name="profile_university">Perfil</string>
    <string name="profile_major">Carrera</string>
    <string name="profile_save_button">Completar Registro</string>
    <string name="profile_dateformat">%02d/%02d/%04d</string>
    <string name="profile_empty_message">Completa todos los campos</string>
    <string name="profile_email_invalid_message">Formato de correo inválido</string>
    <string name="profile_update_success">Información actualizada</string>
    <string name="profile_telefono_require_message">Completa tu teléfono</string>
    <string name="profile_firstname_require_message">Completa tus nombres</string>
    <string name="profile_lastname_require_message">Completa tus apellidos</string>
    <string name="profile_gender_require_message">Completa tu sexo</string>
    <string name="profile_birthdate_require_message">Completa tu fecha de nacimiento</string>
    <string name="profile_email_require_message">Completa tu correo</string>
    <string name="profile_department_require_message">Selecciona tu departamento de procedencia</string>
    <string name="profile_province_require_message">Selecciona tu provincia de procedencia</string>
    <string name="profile_district_require_message">Selecciona tu distrito de procedencia</string>
    <string name="profile_school_require_message">Selecciona tu colegio de procedencia</string>
    <string name="quiz_execute_confirm_title">Ejecución de Exámen</string>
    <string name="quiz_execute_confirm_message">¿Estás listo para rendir el exámen?</string>
    <string name="quiz_submission_button">Finalizar</string>
    <string name="quiz_submission_confirm_title">Finalizar Exámen</string>
    <string name="quiz_submission_confirm_message">¿Realmente desea finalizar el exámen?</string>
    <string name="quiz_tab_questions">Preguntas</string>
    <string name="quiz_tab_answers">Respuestas</string>
    <string name="quiz_question_level_text">FASE %d - NIVEL %d</string>
    <string name="quiz_question_index_text">PREGUNTA %d</string>
    <string name="quiz_question_multiscore_text">%spts/%spts/%spts</string>
    <string name="quiz_question_score_text">%spts</string>
    <string name="quiz_completed_message">¡Examen Finalizado!</string>
    <string name="quiz_reult_success_message">EXCELENTE TRABAJO!!!</string>
    <string name="quiz_reult_fail_message">TIENES QUE PRACTICAR MÁS!!!</string>
</resources>
