<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:title="@string/title_home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/menu_classrooms"
        android:title="@string/title_classrooms"
        android:icon="@drawable/ic_classrooms" />

    <item
        android:id="@+id/menu_courses"
        android:title="@string/title_courses"
        android:icon="@drawable/ic_courses" />

    <item
        android:id="@+id/menu_books"
        android:title="@string/title_books"
        android:icon="@drawable/ic_books" />

    <item
        android:id="@+id/menu_assignments"
        android:title="@string/title_assignments"
        android:icon="@drawable/ic_assignments" />

</menu>