<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_repeatable">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_splash_extrawhite_gradient"
        android:alpha=".9"/>

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/ic_picture"/>

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_image"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/primaryText"
        android:text="@string/app_welcome"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="200dp"
            android:layout_margin="32dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="16dp">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="16dp"
                            app:srcCompat="@drawable/ic_account_supervisor"/>

                        <fr.ganfra.materialspinner.MaterialSpinner
                            android:id="@+id/role_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:ms_hint="Rol de acceso"
                            app:ms_enableFloatingLabel="true"
                            app:ms_enableErrorLabel="true"/>

<!--                        <Spinner-->
<!--                            android:id="@+id/role_spinner"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            style="@style/Widget.AppCompat.Spinner.Underlined"/>-->

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="16dp">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="16dp"
                            app:srcCompat="@drawable/ic_cellphone"/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/phonenumber_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="phone"
                                android:maxLines="1"
                                android:maxLength="12"
                                android:hint="@string/login_phonenumber"
                                tools:text="971278643"/>

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="16dp">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="16dp"
                            app:srcCompat="@drawable/ic_password"/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/password_input"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:maxLength="9"
                                android:hint="@string/login_password"
                                tools:text="971278643"/>

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:text="@string/login_login_button"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/login_register_button"/>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/sign_in_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:alpha="0"
        tools:alpha="1"/>

</RelativeLayout>
