<?xml version="1.0" encoding="utf-8"?>
<com.vlonjatg.progressactivity.ProgressRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/progress_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:loadingProgressBarColor="@color/colorAccent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/update_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/anchor"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:src="@drawable/bg_drawer_header"/>

                <View
                    android:id="@+id/anchor"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/picture_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="16dp"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/ic_picture"
                    app:srcCompat="@drawable/ic_picture"
                    app:civ_border_color="@color/divider"
                    app:civ_border_width="3dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/takepicture_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/picture_image"
                    android:layout_marginTop="-56dp"
                    app:srcCompat="@drawable/ic_camera"
                    app:rippleColor="@android:color/white"
                    android:focusable="true"
                    android:clickable="true"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp">

                <!-- Dummy item for focus at startup -->
                <View
                    android:id="@+id/dummy_id"
                    android:layout_width="0px"
                    android:layout_height="0px"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <!-- Nombre -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/firstname_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        app:srcCompat="@drawable/ic_account"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/firstname_icon">

                        <EditText
                            android:id="@+id/firstname_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_firstname"
                            android:inputType="textCapWords"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>


                <!--Apellido-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/lastname_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        app:srcCompat="@drawable/ic_account"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/lastname_icon">

                        <EditText
                            android:id="@+id/lastname_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_lastname"
                            android:inputType="textCapWords"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>

                <!--Sexo-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/gender_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        app:srcCompat="@drawable/ic_gender"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/gender_icon">

                        <fr.ganfra.materialspinner.MaterialSpinner
                            android:id="@+id/gender_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            app:ms_hint="@string/profile_gender" />

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>

                <!--Fecha Nacimiento-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/birthdate_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        app:srcCompat="@drawable/ic_calendar"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/birthdate_icon">

                        <EditText
                            android:id="@+id/birthdate_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_birthday"
                            android:inputType="datetime"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>

                <!--Correo-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/email_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        app:srcCompat="@drawable/ic_email"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/email_icon">

                        <EditText
                            android:id="@+id/email_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"/>

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>

                <!-- Telefono -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/phonenumber_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        app:srcCompat="@drawable/ic_cellphone"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/phonenumber_icon">

                        <EditText
                            android:id="@+id/phonenumber_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/profile_phonenumber"
                            android:inputType="phone"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>

                <!--Pais-->
<!--                <RelativeLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content">-->
<!--    -->
<!--                    <android.support.v7.widget.AppCompatImageView-->
<!--                        android:id="@+id/country_icon"-->
<!--                        android:layout_width="24dp"-->
<!--                        android:layout_height="24dp"-->
<!--                        android:layout_marginTop="20dp"-->
<!--                        android:layout_marginEnd="8dp"-->
<!--                        app:srcCompat="@drawable/ic_flag"/>-->
<!--    -->
<!--                    <android.support.design.widget.TextInputLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_toEndOf="@+id/country_icon">-->
<!--    -->
<!--                        <fr.ganfra.materialspinner.MaterialSpinner-->
<!--                            android:id="@+id/country_spinner"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_marginStart="4dp"-->
<!--                            app:ms_hint="@string/profile_pais"-->
<!--                            app:ms_enableFloatingLabel="true"-->
<!--                            app:ms_enableErrorLabel="true"/>-->
<!--    -->
<!--                    </android.support.design.widget.TextInputLayout>-->
<!--    -->
<!--                </RelativeLayout>-->

                <!--Departamento-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/department_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        app:srcCompat="@drawable/ic_map_marker"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/department_icon">

                        <fr.ganfra.materialspinner.MaterialSpinner
                            android:id="@+id/department_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            app:ms_hint="@string/profile_departament" />

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>

                <!--Provincia-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/province_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        app:srcCompat="@drawable/ic_map_marker"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/province_icon">

                        <fr.ganfra.materialspinner.MaterialSpinner
                            android:id="@+id/province_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            app:ms_hint="@string/profile_province" />

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>

                <!--Distrito-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/district_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        app:srcCompat="@drawable/ic_map_marker"/>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/district_icon">

                        <fr.ganfra.materialspinner.MaterialSpinner
                            android:id="@+id/district_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            app:ms_hint="@string/profile_district" />

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>

                <!--Colegio-->
                <!--<android.support.design.widget.TextInputLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="8dp">-->

                    <!--<android.support.v7.widget.AppCompatAutoCompleteTextView-->
                        <!--android:id="@+id/colegio_autocomplete"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:hint="@string/profile_colegio"-->
                        <!--android:textSize="16sp"-->
                        <!--android:drawablePadding="8dp"-->
                        <!--android:drawableStart="@drawable/ic_home_modern"/>-->

                <!--</android.support.design.widget.TextInputLayout>-->

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/update_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/profile_update_button"/>

</com.vlonjatg.progressactivity.ProgressRelativeLayout>